refactor: simplifying tests, to not manage resources.
(cherry picked from commit 550ac4d03ba05db8451ab68ae46c93708f435e19)