@@ -7,8 +7,6 @@
  */
 package io.camunda.zeebe.backup.processing;
 
-import static io.camunda.zeebe.db.impl.rocksdb.ZeebeRocksDbFactory.DEFAULT_CACHE_SIZE;
-import static io.camunda.zeebe.db.impl.rocksdb.ZeebeRocksDbFactory.DEFAULT_WRITE_BUFFER_SIZE;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
@@ -30,7 +28,6 @@ import io.camunda.zeebe.db.ConsistencyChecksSettings;
 import io.camunda.zeebe.db.ZeebeDb;
 import io.camunda.zeebe.db.impl.rocksdb.RocksDbConfiguration;
 import io.camunda.zeebe.db.impl.rocksdb.ZeebeRocksDbFactory;
-import io.camunda.zeebe.db.impl.rocksdb.ZeebeRocksDbFactory.SharedRocksDbResources;
 import io.camunda.zeebe.protocol.impl.record.value.management.CheckpointRecord;
 import io.camunda.zeebe.protocol.record.RecordType;
 import io.camunda.zeebe.protocol.record.RejectionType;
@@ -55,15 +52,8 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.ValueSource;
-import org.rocksdb.LRUCache;
-import org.rocksdb.RocksDB;
-import org.rocksdb.WriteBufferManager;
 
 final class CheckpointRecordsProcessorTest {
-
-  static {
-    RocksDB.loadLibrary();
-  }
 
   @TempDir Path database;
   final BackupManager backupManager = mock(BackupManager.class);
@@ -74,28 +64,18 @@ final class CheckpointRecordsProcessorTest {
   // Used for verifying state in the tests
   private CheckpointState state;
   private ZeebeDb zeebedb;
-  private SharedRocksDbResources sharedRocksDbResources;
   private final AtomicBoolean scalingInProgress = new AtomicBoolean(false);
   private final AtomicInteger dynamicPartitionCount =
       new AtomicInteger(3); // Default partition count for tests
 
   @BeforeEach
   void setup() {
-    final LRUCache lruCache = new LRUCache(DEFAULT_CACHE_SIZE);
-    sharedRocksDbResources =
-        new SharedRocksDbResources(
-            lruCache,
-            new WriteBufferManager(DEFAULT_WRITE_BUFFER_SIZE, lruCache),
-            DEFAULT_CACHE_SIZE);
-    final int defaultPartitionCount = 3;
     zeebedb =
         new ZeebeRocksDbFactory<>(
                 new RocksDbConfiguration(),
                 new ConsistencyChecksSettings(true, true),
                 new AccessMetricsConfiguration(Kind.NONE, 1),
-                SimpleMeterRegistry::new,
-                sharedRocksDbResources,
-                defaultPartitionCount)
+                SimpleMeterRegistry::new)
             .createDb(database.toFile());
     final RecordProcessorContextImpl context = createContext(executor, zeebedb);
 
@@ -126,7 +106,6 @@ final class CheckpointRecordsProcessorTest {
   @AfterEach
   void after() throws Exception {
     zeebedb.close();
-    sharedRocksDbResources.close();
   }
 
   @Test
@@ -153,7 +132,7 @@ final class CheckpointRecordsProcessorTest {
 
     // followup event is written
     assertThat(result.records()).hasSize(1);
-    final Event followupEvent = result.records().getFirst();
+    final Event followupEvent = result.records().get(0);
     assertThat(followupEvent.intent()).isEqualTo(CheckpointIntent.CREATED);
     assertThat(followupEvent.type()).isEqualTo(RecordType.EVENT);
     assertThat(followupEvent.value()).isNotNull();
